--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: git checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Setup Docker
+        uses: ./.github/actions/docker-setup
       - name: install Rust
         uses: actions-rs/toolchain@v1
         with:
