--- a/src/reshard/app/Cargo.toml
+++ b/src/reshard/app/Cargo.toml
@@ -9,33 +9,27 @@ name = "reshard_app"
 path = "src/lib.rs"
 
 [features]
-mock = ["qos_core/mock", "qos_nsm/mock_realtime"]
+mock  = ["qos_core/mock", "qos_nsm/mock_realtime"]
 vsock = ["qos_core/vm"]
 
 [dependencies]
-qos_core = { path = "../../qos_core" }
-qos_crypto = { path = "../../qos_crypto" }
-qos_p256 = { path = "../../qos_p256" }
-qos_nsm = { path = "../../qos_nsm" }
-qos_net = { path = "../../qos_net" }
-qos_hex = { path = "../../qos_hex"}
-generated = { path = "../../generated" }
-http = { version = "0.2", default-features = false }
-httparse = { version = "1.6", default-features = false }
-url = { version = "2.5.2", default-features = false }
-rustls = { version = "0.23.5", features = [
-  "std",
-  "aws_lc_rs",
-  "std",
-  "tls12",
-], default-features = false }
-webpki-roots = { version = "0.26.1", default-features = false }
-chunked_transfer = { version = "1.5.0", default-features = false }
-borsh = { version = "1.0", features = [
-  "std",
-  "derive",
-], default-features = false }
-serde = { version = "1", features = ["derive"], default-features = false }
-serde_json = { version = "1", default-features = false }
+qos_core   = { workspace = true }
+qos_crypto = { workspace = true }
+qos_p256   = { workspace = true }
+qos_nsm    = { workspace = true }
+qos_net    = { workspace = true }
+qos_hex    = { workspace = true }
+generated  = { workspace = true }
+
+http            = { workspace = true, default-features = false }
+httparse        = { workspace = true, default-features = false }
+url             = { workspace = true, default-features = false }
+rustls          = { workspace = true, features = ["std","aws_lc_rs","tls12"], default-features = false }
+webpki-roots    = { workspace = true, default-features = false }
+chunked_transfer= { workspace = true, default-features = false }
+borsh           = { workspace = true, features = ["std","derive"], default-features = false }
+serde           = { workspace = true, features = ["derive"], default-features = false }
+serde_json      = { workspace = true, default-features = false }
+
 [dev-dependencies]
 reshard_app = { path = ".", features = ["mock"] }
