don't use env -C

--- a/src/images/qos_client/Containerfile
+++ b/src/images/qos_client/Containerfile
@@ -5,7 +5,8 @@ FROM base AS build
 ENV PCSC_LIB_NAME=static=pcsclite
 RUN <<-EOF
 	set -eux
-	env -C /src/qos_client cargo build --features smartcard ${CARGOFLAGS}
+	cd /src/qos_client
+	cargo build --features smartcard ${CARGOFLAGS}
 	cp /src/target/${TARGET}/release/qos_client /
 	file /qos_client | grep "static-pie"
 EOF
