--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,11 +38,11 @@ jobs:
 
   build-linux-only-crates:
     name: build-linux-only-crates
-    runs-on: ubicloud-standard-2
+    runs-on: ubicloud-standard-8
     steps:
       - name: Checkout sources
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Docker
         uses: ./.github/actions/docker-setup
       - name: Run build-linux-only
-        run: make build-linux-only
+        run: make -j$(nproc) build-linux-only
