qos_core: refactor reaper into using async

--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -21,7 +21,7 @@ serde_bytes = { workspace = true }
 serde = { workspace = true }
 
 futures = { workspace = true }
-tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false }
+tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal", "process"], default-features = false }
 tokio-vsock = { workspace = true }
 
 [dev-dependencies]
