qos_core: change format of Manifest, ManifestEnvelope, GenesisOutput and QuorumKey to json
also update qos_client

--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -22,6 +22,7 @@ borsh = { workspace = true }
 aws-nitro-enclaves-nsm-api = { workspace = true }
 
 serde_bytes = { workspace = true }
+serde_json = { workspace = true }
 serde = { workspace = true }
 
 futures = { workspace = true }
