--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 borsh = { workspace = true }
 nix = { workspace = true }
 rustls = { workspace = true }
+serde_json = { workspace = true }
 webpki-roots = { workspace = true }
 tokio-rustls = { workspace = true }
 
