--- a/src/init/Cargo.toml
+++ b/src/init/Cargo.toml
@@ -6,13 +6,13 @@ rust-version = "1.88"
 publish = false
 
 [dependencies]
-libc = "0.2.172"
+libc = "=0.2.174"
 nix = { version = "0.29.0", features = ["ioctl"]}
 qos_aws = { path = "../qos_aws"}
 qos_system = { path = "../qos_system"}
 qos_core = { path = "../qos_core", features = ["vm"], default-features = false }
 qos_nsm = { path = "../qos_nsm", default-features = false }
-tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"], default-features = false }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"], default-features = false }
 
 [[bin]]
 name = "init"
