--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "qos_host",
   "qos_hex",
   "qos_net",
+  "qos_proto",
   "qos_test_primitives",
   "qos_p256",
   "qos_nsm",
@@ -24,6 +25,7 @@ default-members = [
   "qos_host",
   "qos_hex",
   "qos_net",
+  "qos_proto",
   "qos_test_primitives",
   "qos_p256",
   "qos_nsm",
@@ -34,6 +36,8 @@ exclude = [
   "qos_aws",
   "qos_system",
   "qos_enclave",
+  # proto_gen is a standalone tool, not part of the workspace
+  "qos_proto/proto_gen",
 ]
 # We need this to avoid issues with the mock feature uinintentionally being
 # enabled just because some tests need it.
@@ -58,6 +62,7 @@ missing_docs = "warn"
 [workspace.dependencies]
 # External dependencies
 aes-gcm = { version = "0.10.3", features = ["aes", "alloc"], default-features = false }
+prost = "0.13"
 aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
 axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-features = false }
@@ -105,6 +110,7 @@ qos_host = { path = "qos_host", default-features = false }
 qos_net = { path = "qos_net", default-features = false }
 qos_nsm = { path = "qos_nsm", default-features = false }
 qos_p256 = { path = "qos_p256" }
+qos_proto = { path = "qos_proto", default-features = false }
 qos_test_primitives = { path = "qos_test_primitives" }
 
 # Option for the future: build all QOS applications with additional runtime checks
