--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -13,10 +13,12 @@ qos_crypto = { workspace = true }
 qos_hex = { workspace = true, features = ["serde"] }
 qos_p256 = { workspace = true }
 qos_nsm = { workspace = true, default-features = false }
+qos_proto = { workspace = true }
 
 nix = { workspace = true }
 libc = { workspace = true }
 borsh = { workspace = true }
+prost = { workspace = true }
 
 # For AWS Nitro
 aws-nitro-enclaves-nsm-api = { workspace = true }
