--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -11,11 +11,12 @@ workspace = true
 [dependencies]
 qos_core = { workspace = true, default-features = false }
 qos_hex = { workspace = true, features = ["serde"], default-features = false }
+qos_proto = { workspace = true }
 
 # Third party
 axum = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
-borsh = { workspace = true }
+prost = { workspace = true }
 serde_json = { workspace = true }
 serde = { workspace = true }
 
