--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -16,11 +16,13 @@ qos_net = { workspace = true, features = ["proxy" ], default-features = false }
 qos_crypto = { workspace = true }
 qos_hex = { workspace = true }
 qos_p256 = { workspace = true, features = ["mock"] }
+qos_proto = { workspace = true }
 qos_test_primitives = { workspace = true }
 
 futures = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 borsh = { workspace = true }
+prost = { workspace = true }
 nix = { workspace = true }
 rustls = { workspace = true }
 serde_json = { workspace = true }
