--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 
 [dependencies]
 qos_hex = { workspace = true }
+qos_crypto = { workspace = true }
 
 borsh = { workspace = true }
 
