--- a/src/qos_nsm/Cargo.toml
+++ b/src/qos_nsm/Cargo.toml
@@ -9,8 +9,8 @@ publish = false
 workspace = true
 
 [dependencies]
-qos_hex = { workspace = true }
-borsh = { workspace = true }
+qos_hex = { workspace = true, features = ["serde"] }
+serde = { workspace = true }
 aws-nitro-enclaves-nsm-api = { workspace = true, features = ["nix"] }
 aws-nitro-enclaves-cose = { workspace = true }
 sha2 = { workspace = true }
