--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -46,6 +46,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.lints.rust]
+missing_docs = "warn"
 unsafe_code = "deny"
 
 [workspace.lints.clippy]
