qos_bridge: add separate bridge binary
removes the functionality from qos_host so we can host it in separate container

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
   "integration",
+  "qos_bridge",
   "qos_client",
   "qos_core",
   "qos_crypto",
@@ -18,6 +19,7 @@ members = [
 ]
 default-members = [
   "integration",
+  "qos_bridge",
   "qos_client",
   "qos_core",
   "qos_crypto",
